                                                                                                                     
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(Metropolis)

# Helper variables
GET_FILENAME_COMPONENT(TOP_LEVEL . ABSOLUTE)
SET(LIB_PROC_MODEL_PATH "${TOP_LEVEL}/libProcModel/")
SET(PROC_MODELER_PATH "${TOP_LEVEL}/ProcModeler/")
SET(LOCAL_CMAKE_MODULES "${TOP_LEVEL}/CMake/Modules/")

# Qt
FIND_PACKAGE(Qt4 REQUIRED)
SET(QT_USE_QTOPENGL TRUE)
INCLUDE (${QT_USE_FILE})
LIST(APPEND LIBS ${QT_LIBRARIES})

# OpenGL
FIND_PACKAGE(OpenGL)
LIST(APPEND LIBS ${OPENGL_LIBRARIES})

# libProcModel
add_definitions(${CMAKE_CXX_FLAGS} "-fvisibility=hidden")
FILE(GLOB LIB_PROC_MODEL_CPP "${LIB_PROC_MODEL_PATH}/src/*.cpp")
FILE(GLOB LIB_PROC_MODEL_H "${LIB_PROC_MODEL_PATH}/src/*.hpp")
LIST(APPEND LIB_PROC_MODEL_SOURCES ${LIB_PROC_MODEL_CPP} ${LIB_PROC_MODEL_H})
ADD_LIBRARY(LIB_PROC_MODEL SHARED ${LIB_PROC_MODEL_SOURCES})
TARGET_LINK_LIBRARIES(LIB_PROC_MODEL ${LIBS})

# GLEW
LIST(APPEND CMAKE_MODULE_PATH "${LOCAL_CMAKE_MODULES}")
find_package(GLEW REQUIRED)
include_directories(${GLEW_INCLUDE_PATH})
LIST(APPEND LIBS ${GLEW_LIBRARY})

# ProcModeler
INCLUDE_DIRECTORIES("${LIB_PROC_MODEL_PATH}/src")
FILE(GLOB PROC_MODELER_CPP "${PROC_MODELER_PATH}/src/*.cpp")
FILE(GLOB PROC_MODELER_H "${PROC_MODELER_PATH}/src/*.hpp")
QT4_WRAP_CPP(PROC_MODELER_H_MOC ${PROC_MODELER_H})
LIST(APPEND PROC_MODELER_SOURCES ${PROC_MODELER_CPP} ${PROC_MODELER_H} ${PROC_MODELER_H_MOC})
ADD_EXECUTABLE(PROC_MODELER ${PROC_MODELER_SOURCES})
TARGET_LINK_LIBRARIES(PROC_MODELER ${LIBS} LIB_PROC_MODEL)
